--- a/src/sass/components/_app.scss
+++ b/src/sass/components/_app.scss
@@ -30,6 +30,7 @@
     padding: 0.9rem 4.35rem 1rem 4.45rem;
     background-color: #000000;
     border-radius: 7px;
+    cursor: pointer;
     img {
       width: 100%;
     }
