--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -93,10 +93,12 @@
 
     &--terms {
       font-size: 1.6rem;
+      cursor: pointer;
     }
 
     &--privacy {
       font-size: 1.5rem;
+      cursor: pointer;
     }
 
     &--copyright {
@@ -110,6 +112,7 @@
     img {
       width: 2.1rem;
       height: 2.1rem;
+      cursor: pointer;
     }
   }
 }
