--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'layout/navigation';
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/tableStyles';
 
 @import 'components/button';
 @import 'components/empower';
