--- a/src/components/BiographyTable/BiographyTable.module.scss
+++ b/src/components/BiographyTable/BiographyTable.module.scss
@@ -3,6 +3,8 @@
   border-collapse: collapse;
   padding: 3px 18px;
   font-size: 24px;
+  color: var(--color-grey-1);
+  background-color: var(--color-grey-4);
 }
 
 .boxStyle {
@@ -10,6 +12,8 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+  color: var(--color-grey-1);
+  background-color: var(--color-grey-4);
 }
 
 .rowStyle {
