--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -39,7 +39,7 @@
   }
 
   &__heading {
-    color: var(--color-white);
+    color: var(--color-white-footer);
     text-transform: uppercase;
     font-size: 1.4rem;
     letter-spacing: 1px;
@@ -58,7 +58,7 @@
     display: inline-block;
     text-decoration: none;
     font-size: 1.8rem;
-    color: var(--color-white);
+    color: var(--color-white-footer);
     transition: all 0.2s;
   }
 
@@ -79,7 +79,7 @@
     margin-right: 24.6rem;
     display: flex;
     flex-direction: column;
-    color: var(--color-white);
+    color: var(--color-white-footer);
 
     @media only screen and (max-width: $bp-largest) {
       margin-right: 0;
