--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -41,5 +41,5 @@
 
 footer {
   padding: 5.9rem 0 8.1rem 0;
-  background-color: var(--color-black);
+  background-color: var(--color-black-footer);
 }
