--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -20,7 +20,7 @@
 
 .section-solution {
   padding: 0 6rem;
-  border-radius: 0 0 1.9rem 1.9rem;
+  // border-radius: 0 0 1.9rem 1.9rem;
   background-color: var(--color-grey-4);
 
   @media only screen and (max-width: $bp-medium) {
